# CudaSobel

./: .gitignore  CMakeLists.txt  CudaKernel.cu  Makefile  README.md  defines.h  defines.hpp  main.cpp  main.cu  performance.py  performance_summary.py  resolution_summary.py  wrapper.h
